Use nautilus_get_uri_shortname_for_display to avoid crashing g_markup with
2006-01-26  Martin Wehner  <martin.wehner@gmail.com>

	* libnautilus-private/nautilus-file-operations.c:
	(progress_dialog_set_to_from_item_text):
	Use nautilus_get_uri_shortname_for_display to avoid
	crashing g_markup with invalid utf-8. Fixes #325586.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-01-26  Martin Wehner  <martin.wehner@gmail.com>
+
+	* libnautilus-private/nautilus-file-operations.c:
+	(progress_dialog_set_to_from_item_text):
+	Use nautilus_get_uri_shortname_for_display to avoid
+	crashing g_markup with invalid utf-8. Fixes #325586.
+
 2006-01-22  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/file-manager/fm-properties-window.c:
