--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-26  Evandro Fernandes Giovanini <evandrofg@ig.com.br>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation.
+
 2006-01-25  Nickolay V. Shmyrev <nshmyrev@yandex.ru>
 
 	* ru.po: Update Russian translation by 
