HIGify the icon in the delete from trash dialog. Patch from Luca Ferretti
2006-01-26  Martin Wehner  <martin.wehner@gmail.com>

	* src/file-manager/fm-directory-view.c:
	(confirm_delete_from_trash):
	HIGify the icon in the delete from trash dialog.
	Patch from Luca Ferretti <elle.uca@libero.it>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2006-01-26  Martin Wehner  <martin.wehner@gmail.com>
 
+	* src/file-manager/fm-directory-view.c:
+	(confirm_delete_from_trash):
+	HIGify the icon in the delete from trash dialog.
+	Patch from Luca Ferretti <elle.uca@libero.it> 
+
+2006-01-26  Martin Wehner  <martin.wehner@gmail.com>
+
 	* test/test-nautilus-directory-async.c: (main):
 	Fix C99-style variable initialization.
 	Patch from Jens Granseuer <jensgr@gmx.net>
