--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-29  Clytie Siddall <clytie@riverland.net.au>
+
+	* vi.po: Updated Vietnamese translation.
+
 2006-01-26  Evandro Fernandes Giovanini <evandrofg@ig.com.br>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation.
