Use same grid as positioned icons to not mess up spacing.
2006-01-29  Christian Neumair  <chris@gnome-de.org>

	* libnautilus-private/nautilus-icon-container.c:
	(finish_adding_new_icons):
	Use same grid as positioned icons to not mess up spacing.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-01-29  Christian Neumair  <chris@gnome-de.org>
+
+	* libnautilus-private/nautilus-icon-container.c:
+	(finish_adding_new_icons):
+	Use same grid as positioned icons to not mess up spacing.
+
 2006-01-28  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-file.c:
