Some more corrections in Kurdish translations.

--- a/po/ku.po
+++ b/po/ku.po
@@ -1645,19 +1645,19 @@ msgstr "dosiya nû"
 #. localizers: progress dialog title
 #: ../libnautilus-private/nautilus-file-operations.c:2672
 msgid "Deleting files"
-msgstr "Dosiyan radike"
+msgstr "Dosya tên jêbirin"
 
 #. localizers: label prepended to the progress count
 #: ../libnautilus-private/nautilus-file-operations.c:2674
 #: ../libnautilus-private/nautilus-file-operations.c:2709
 msgid "Files deleted:"
-msgstr "Dosiyên rakirî:"
+msgstr "Dosiyên hatine rakirin:"
 
 #. localizers: label prepended to the name of the current file deleted
 #: ../libnautilus-private/nautilus-file-operations.c:2676
 #: ../libnautilus-private/nautilus-file-operations.c:2711
 msgid "Deleting"
-msgstr "Radike"
+msgstr "Tê jêbirin"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2677
 msgid "Preparing to Delete files..."
@@ -1666,7 +1666,7 @@ msgstr "Jêbirina dosiyan tê amade kirin..."
 #. localizers: progress dialog title
 #: ../libnautilus-private/nautilus-file-operations.c:2707
 msgid "Emptying the Trash"
-msgstr ""
+msgstr "Sergo tê valakirin"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2712
 msgid "Preparing to Empty the Trash..."
@@ -1684,14 +1684,14 @@ msgstr ""
 
 #: ../libnautilus-private/nautilus-file-operations.c:2773
 msgid "_Empty Trash"
-msgstr ""
+msgstr "Sergoyî vala bike"
 
 #: ../libnautilus-private/nautilus-file-utilities.c:75
 #: ../libnautilus-private/nautilus-search-directory-file.c:173
 #: ../libnautilus-private/nautilus-search-directory-file.c:188
 #: ../libnautilus-private/nautilus-search-directory-file.c:210
 msgid "Search"
-msgstr ""
+msgstr "Lêbigere"
 
 #: ../libnautilus-private/nautilus-file-utilities.c:520
 #: ../libnautilus-private/nautilus-global-preferences.c:522
@@ -1713,11 +1713,11 @@ msgstr "Dirb"
 
 #: ../libnautilus-private/nautilus-file-utilities.c:528
 msgid "CD/DVD Creator"
-msgstr ""
+msgstr "Afirandinêrê CD/DVD'yan"
 
 #: ../libnautilus-private/nautilus-file-utilities.c:530
 msgid "Windows Network"
-msgstr ""
+msgstr "Tora Windowsê"
 
 #. translators: this is the title of the "dns-sd:///" location
 #: ../libnautilus-private/nautilus-file-utilities.c:533
@@ -1852,15 +1852,15 @@ msgstr "00/00/00, 00:00 PN"
 
 #: ../libnautilus-private/nautilus-file.c:2977
 msgid "%m/%-d/%y, %-I:%M %p"
-msgstr ""
+msgstr "%m/%-d/%y, %-I:%M %p"
 
 #: ../libnautilus-private/nautilus-file.c:2979
 msgid "00/00/00"
-msgstr ""
+msgstr "00/00/00"
 
 #: ../libnautilus-private/nautilus-file.c:2980
 msgid "%m/%d/%y"
-msgstr ""
+msgstr "%m/%d/%y"
 
 #: ../libnautilus-private/nautilus-file.c:4277
 #: ../src/file-manager/fm-directory-view.c:2208
@@ -1868,7 +1868,7 @@ msgstr ""
 msgid "%u item"
 msgid_plural "%u items"
 msgstr[0] "%u tist"
-msgstr[1] ""
+msgstr[1] "%u tist"
 
 #: ../libnautilus-private/nautilus-file.c:4278
 #, c-format
@@ -1892,9 +1892,8 @@ msgstr ""
 #. This means no contents at all were readable
 #: ../libnautilus-private/nautilus-file.c:4651
 #: ../libnautilus-private/nautilus-file.c:4667
-#, fuzzy
 msgid "? items"
-msgstr "? tist"
+msgstr "? tişt"
 
 #. This means no contents at all were readable
 #: ../libnautilus-private/nautilus-file.c:4657
@@ -1907,7 +1906,7 @@ msgstr "cureyê nenas"
 
 #: ../libnautilus-private/nautilus-file.c:4675
 msgid "unknown MIME type"
-msgstr ""
+msgstr "cureyê MIME yê nenas"
 
 #. Fallback, use for both unknown attributes and attributes
 #. * for which we have no more appropriate default.
@@ -1937,11 +1936,11 @@ msgstr ""
 
 #: ../libnautilus-private/nautilus-file.c:4752
 msgid "link"
-msgstr ""
+msgstr "girêdan"
 
 #: ../libnautilus-private/nautilus-file.c:4772
 msgid "link (broken)"
-msgstr ""
+msgstr "girêdan (şikestî)"
 
 #: ../libnautilus-private/nautilus-file.c:6269
 #: ../libnautilus-private/nautilus-global-preferences.c:528
@@ -2502,7 +2501,7 @@ msgstr ""
 #: ../src/file-manager/fm-directory-view.c:1306
 #, fuzzy
 msgid "Search _name:"
-msgstr "Navê _rengê:"
+msgstr "Navê _lêgerandinê:"
 
 #: ../src/file-manager/fm-directory-view.c:1319
 #: ../src/nautilus-connect-server-dialog.c:535
@@ -4725,7 +4724,7 @@ msgstr ""
 #: ../src/nautilus-navigation-window-menus.c:446
 #: ../src/nautilus-spatial-window.c:849
 msgid "_Search"
-msgstr ""
+msgstr "_Lêbigere"
 
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:447
@@ -5095,7 +5094,7 @@ msgstr ""
 #: ../src/nautilus-query-editor.c:1031
 #, fuzzy
 msgid "Go"
-msgstr "here jor"
+msgstr "Biçe"
 
 #: ../src/nautilus-query-editor.c:1033
 #, fuzzy
