--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-30  Ankit Patel  <ankit644@yahoo.com>
+
+        * gu.po: Updated Gujarati Translation.
+
 2006-01-29  Erdal Ronahi  <erdal.ronahi@gmail.com>
 
 	* ku.po: Updated Kurdish translations.
