--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Major changes in 2.13.90 are:
+* Add option to always use the location bar to the preferences dialog
+* Enable the icons in the places sidebar as drop targets
+* Fix for desktop volume icon positioning
+* Show detailed file size in the properties dialog
+* HIG fix for the delete from trash dialog
+* Fix icon scaling for images with extreme ratios
+* Fix leaks & crashes
+
 Major changes in 2.13.4 are:
 * Open modules with BIND_LOCAL
 * Disable network icon on desktop by default
