--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+=== nautilus 2.13.90 ===
+
+2006-01-31  Martin Wehner  <martin.wehner@gmail.com>
+
+	* NEWS:
+	Update for release
+
+	* configure.in:
+	Bump version to 2.13.90
+
 2006-01-31  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-file-management-properties.c:
