--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-31  Martin Wehner  <martin.wehner@gmail.com>
+
+	* configure.in:
+	Post release version bump.
+
 === nautilus 2.13.90 ===
 
 2006-01-31  Martin Wehner  <martin.wehner@gmail.com>
