Fixed Russian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-02  Leonid Kanter <leon@asplinux.ru>
+
+	* ru.po: fixed Russian translation
+
 2006-02-02  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>
 
 	* ca.po: Updated Catalan translation.
