--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-06  Alexander Larsson  <alexl@redhat.com>
+
+	* nautilus-folder-handler.desktop.in:
+	Add application/x-gnome-saved-search to the list of folder types handled
+
 2006-01-31  Martin Wehner  <martin.wehner@gmail.com>
 
 	* configure.in:
