Fix layout bug on desktop (#153519)
2006-02-06  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c (lay_down_icons_tblr):
	Fix layout bug on desktop (#153519)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-02-06  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-icon-container.c (lay_down_icons_tblr):
+	Fix layout bug on desktop (#153519)
+
+2006-02-06  Alexander Larsson  <alexl@redhat.com>
+
 	* nautilus-folder-handler.desktop.in:
 	Add application/x-gnome-saved-search to the list of folder types handled
 
