--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-10  Priit Laes  <amd@store20.com>
+
+	* et.po: Translation updated.
+
 2006-02-06  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
