Updated Italian translation
2006-02-11  Luca Ferretti  <elle.uca@libero.it>

	* ut.po: Updated Italian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-11  Luca Ferretti  <elle.uca@libero.it>
+
+	* ut.po: Updated Italian translation
+
 2006-02-10  Priit Laes  <amd@store20.com>
 
 	* et.po: Translation updated.
