--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Major changes in 2.13.91 are:
+* Fix a desktop icon positioning bug
+* Fix opening saved searches file from outside nautilus
+
 Major changes in 2.13.90 are:
 * Add option to always use the location bar to the preferences dialog
 * Enable the icons in the places sidebar as drop targets
