Post release version bump.
2006-02-13  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump.

=== nautilus 2.13.91 ===

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2006-02-13  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump.
+
+=== nautilus 2.13.91 ===
+
+2006-02-13  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release
 
