--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-13  Jakub Friedl  <jfriedl@suse.cz>
+
+	* cs.po: Updated Czech translation
+
 === nautilus 2.13.91 ===
 
 2006-02-11  Luca Ferretti  <elle.uca@libero.it>
