--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-15  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Hungarian translation updated by Mate ORY.
+
 2006-02-13  Jakub Friedl  <jfriedl@suse.cz>
 
 	* cs.po: Updated Czech translation
