--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-16  Hendrik Richter  <hendi@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2006-02-15  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Hungarian translation updated by Mate ORY.
