--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-16  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 2006-02-16  Hendrik Richter  <hendi@gnome-de.org>
 
 	* de.po: Updated German translation.
