--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-17 Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Updated Greek Translation.
+
 2006-02-16  Rhys Jones  <rhys@sucs.org>
 
 	* cy.po: Updated Welsh translation.
