--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-19  Takeshi AIHANA <takeshi.aihana@gmail.com>
+
+	* ja.po: Updated Japanese translation.
+
 2006-02-17 Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated Greek Translation.
