Adjusted Thai translation.
2006-02-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* th.po: Adjusted Thai translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* th.po: Adjusted Thai translation.
+
 2006-02-20  Žygimantas Beručka  <zygis@gnome.org>
 
 	* lt.po: Updated Lithuanian translation.
