--- a/po/th.po
+++ b/po/th.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: th\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-01-31 18:54+0700\n"
-"PO-Revision-Date: 2006-01-31 18:56+0700\n"
+"PO-Revision-Date: 2006-02-20 16:26+0700\n"
 "Last-Translator: Theppitak Karoonboonyanan <thep@linux.thai.net>\n"
 "Language-Team: Thai <L10N@opentle.org>\n"
 "MIME-Version: 1.0\n"
@@ -1799,20 +1799,20 @@ msgstr "บริการใน"
 #.
 #: libnautilus-private/nautilus-file.c:2921
 msgid "today at 00:00:00 PM"
-msgstr "วันนี้เวลา 00:00:00 น."
+msgstr "วันนี้ เวลา 00:00:00 น."
 
 #: libnautilus-private/nautilus-file.c:2922
 #: src/nautilus-file-management-properties.c:460
 msgid "today at %-I:%M:%S %p"
-msgstr "วันนี้เวลา %H:%M:%S น."
+msgstr "วันนี้ เวลา %H:%M:%S น."
 
 #: libnautilus-private/nautilus-file.c:2924
 msgid "today at 00:00 PM"
-msgstr "วันนี้เวลา 00:00 น."
+msgstr "วันนี้ เวลา 00:00 น."
 
 #: libnautilus-private/nautilus-file.c:2925
 msgid "today at %-I:%M %p"
-msgstr "วันนี้เวลา %H:%M น."
+msgstr "วันนี้ เวลา %H:%M น."
 
 #: libnautilus-private/nautilus-file.c:2927
 msgid "today, 00:00 PM"
@@ -1832,19 +1832,19 @@ msgstr "วันนี้"
 #.
 #: libnautilus-private/nautilus-file.c:2940
 msgid "yesterday at 00:00:00 PM"
-msgstr "เมื่อวานเวลา 00:00:00 น."
+msgstr "เมื่อวาน เวลา 00:00:00 น."
 
 #: libnautilus-private/nautilus-file.c:2941
 msgid "yesterday at %-I:%M:%S %p"
-msgstr "เมื่อวานเวลา %H:%M:%S น."
+msgstr "เมื่อวาน เวลา %H:%M:%S น."
 
 #: libnautilus-private/nautilus-file.c:2943
 msgid "yesterday at 00:00 PM"
-msgstr "เมื่อวานเวลา 00:00 น."
+msgstr "เมื่อวาน เวลา 00:00 น."
 
 #: libnautilus-private/nautilus-file.c:2944
 msgid "yesterday at %-I:%M %p"
-msgstr "เมื่อวานเวลา %H:%M น."
+msgstr "เมื่อวาน เวลา %H:%M น."
 
 #: libnautilus-private/nautilus-file.c:2946
 msgid "yesterday, 00:00 PM"
@@ -2402,7 +2402,7 @@ msgstr "ดูแหล่งเก็บข้อมูลบนเครื่
 
 #: nautilus-file-management-properties.desktop.in.h:1
 msgid "Change how files are managed"
-msgstr "เลือกว่าจะให้แฟ้มถูกจัดการอย่างไร"
+msgstr "เลือกว่าจะจัดการแฟ้มอย่างไร"
 
 #: nautilus-file-management-properties.desktop.in.h:2
 msgid "File Management"
@@ -4297,7 +4297,7 @@ msgstr "แสดงตรา"
 
 #: src/nautilus-file-management-properties.c:293
 msgid "None"
-msgstr "ไม่เอาสักอย่าง"
+msgstr "ไม่แสดง"
 
 #: src/nautilus-file-management-properties.glade.h:1
 msgid "    "
@@ -4455,7 +4455,7 @@ msgstr "นั_บจำนวนรายการ:"
 
 #: src/nautilus-file-management-properties.glade.h:47
 msgid "Default _zoom level:"
-msgstr "ข_นาดย่อขยายปริยาย:"
+msgstr "อัตรา_ย่อขยายปริยาย:"
 
 #: src/nautilus-file-management-properties.glade.h:48
 msgid "Display"
@@ -4463,7 +4463,7 @@ msgstr "แสดง"
 
 #: src/nautilus-file-management-properties.glade.h:49
 msgid "File Management Preferences"
-msgstr "ค่าปรับแต่งการจัดการแฟ้ม"
+msgstr "ปรับแต่งการจัดการแฟ้ม"
 
 #: src/nautilus-file-management-properties.glade.h:50
 msgid "I_nclude a Delete command that bypasses Trash"
@@ -4491,7 +4491,7 @@ msgstr "แสดงตัวอย่างแฟ้มเ_สียง:"
 
 #: src/nautilus-file-management-properties.glade.h:56
 msgid "Show _only folders"
-msgstr "แ_สดงแต่โฟลเดอร์"
+msgstr "แสดงเฉ_พาะโฟลเดอร์"
 
 #: src/nautilus-file-management-properties.glade.h:57
 msgid "Show _thumbnails:"
@@ -4523,7 +4523,7 @@ msgstr "เ_รียงไอคอน:"
 
 #: src/nautilus-file-management-properties.glade.h:65
 msgid "_Default zoom level:"
-msgstr "_ขนาดย่อขยายปริยาย:"
+msgstr "_อัตราย่อขยายปริยาย:"
 
 #: src/nautilus-file-management-properties.glade.h:66
 msgid "_Double click to activate items"
@@ -4547,7 +4547,7 @@ msgstr "เปิด/ใช้ รายการด้วย_คลิกเด
 
 #: src/nautilus-file-management-properties.glade.h:71
 msgid "_Text beside icons"
-msgstr "เอา_ข้อความไว้ข้างไอคอน"
+msgstr "วาง_ข้อความข้างไอคอน"
 
 #: src/nautilus-file-management-properties.glade.h:72
 msgid "_Use compact layout"
