--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-22  Inaki Larranaga  <dooteo@euskalgnu.org>
+
+	* eu.po: Updated Basque translation.
+
 2006-02-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* th.po: Adjusted Thai translation.
