--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-02-23  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/nautilus-places-sidebar.c: (bookmarks_popup_menu):
+	(bookmarks_button_press_event_cb):
+	Open the popup menu non-modal and pass the button event on to the
+	tree view. Makes a right click select the item under the cursor
+	before bringing up the menu. Fixes #329778.
+
 2006-02-21  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-file.c:
