--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-23  Leonid Kanter <leon@asplinux.ru>
+
+	* ru.po: Updated Russian translation
+
 2006-02-23  Clytie Siddall <clytie@riverland.net.au>
 
 	* ka.po: Added Georgian translation by Alexander Didebulidze <didebuli@in.tum.de> and Vladimer Sichinava <alinux@siena.linux.it>.
