--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-25  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
+
+	* configure.in: Add "zh_HK" to ALL_LINGUAS.
+	
 2006-02-24  Alexander Larsson  <alexl@redhat.com>
 	
 	* libnautilus-private/nautilus-directory-async.c:
