--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-25  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
+
+	* zh_TW.po: Updated Traditional Chinese translation(Taiwan).
+	* zh_HK.po: Added Traditional Chinese translation(Hong Kong).
+	
 2006-02-23  Leonid Kanter <leon@asplinux.ru>
 
 	* ru.po: Updated Russian translation
