--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-26  Ales Nyakhaychyk  <nab@mail.by>
+
+	* be.po: Updated Belarusian translation by Ihar Hrachyshka
+
 2006-02-25  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
 
 	* zh_TW.po: Updated Traditional Chinese translation(Taiwan).
