Only use the idle reveal mechanism for the list view.
2006-02-26  Martin Wehner  <martin.wehner@gmail.com>

	* src/file-manager/fm-directory-view.c: (done_loading):
	Only use the idle reveal mechanism for the list view.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-02-26  Martin Wehner  <martin.wehner@gmail.com>
 
+	* src/file-manager/fm-directory-view.c: (done_loading):
+	Only use the idle reveal mechanism for the list view.
+
+2006-02-26  Martin Wehner  <martin.wehner@gmail.com>
+
 	* src/file-manager/fm-directory-view.c:
 	(fm_directory_view_destroy), (reveal_selection_idle_callback),
 	(done_loading):
