Plug potential leak.
2006-02-26  Christian Neumair  <chris@gnome-de.org>

	* libnautilus-private/nautilus-directory.c:
	(nautilus_directory_notify_files_removed):
	Plug potential leak.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-02-26  Christian Neumair  <chris@gnome-de.org>
+
+	* libnautilus-private/nautilus-directory.c:
+	(nautilus_directory_notify_files_removed):
+	Plug potential leak.
+
 2006-02-26  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/file-manager/fm-directory-view.c: (done_loading):
