--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-26  Lasse Bang Mikkelsen  <lbm@fatalerror.dk>
+
+	* da.po: Updated Danish translation.
+
 2006-02-26  Ales Nyakhaychyk  <nab@mail.by>
 
 	* be.po: Updated Belarusian translation by Ihar Hrachyshka
