Allow saving a sidebar width of 0 (#331475) Patch from Christian Neumair
2006-02-27  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-navigation-window.c:
	Allow saving a sidebar width of 0 (#331475)
	Patch from Christian Neumair

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-02-27  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-navigation-window.c:
+	Allow saving a sidebar width of 0 (#331475)
+	Patch from Christian Neumair
+
+2006-02-27  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-canvas-item.c (create_label_layout):
 	Allow line-breaks after '-', '_', '.'
 	(although not when a short number follows '.')
