Correctly handle *_margins as pixel values, not world-coords.
2006-02-27  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c:
	Correctly handle *_margins as pixel values, not world-coords.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-27  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-container.c:
+	Correctly handle *_margins as pixel values, not world-coords.
+
 2006-02-27  Federico Mena Quintero  <federico@novell.com>
 
 	* libnautilus-private/nautilus-icon-container.c
